# ks-logger

./: .gitignore  CMakeLists.txt  LICENSE
examples/: main.cpp
include/: ks_logger.h
src/: ks_logger.cpp
src/ks_logger_ui/: ks_logger_ui.cpp  ks_logger_ui.h
src/log_channel/: log_channel.cpp  log_channel.h
src/ui/window_frame/: window_frame.cpp  window_frame.h
src/window_frame/: window_frame.cpp  window_frame.h
src/window_menu/: window_menu.cpp  window_menu.h
src/window_tab/: window_tab.cpp  window_tab.h
